# ZemaxDDEClient

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.ru.md  build.sh  main.cpp  version.h  zemax_dde.c  zemax_dde.h
.github/workflows/: build-test.yml  release.yml
src/: application.cpp  application.h  dde_client.cpp  dde_client.h  gui.cpp  gui.h  main.cpp  version.h.in  version.rc.in  zemax_dde.c  zemax_dde.h
src/app/: app.h  app_actions.cpp  app_init.cpp  app_init.h  app_ui.cpp  app_ui.h  config_path.cpp  config_path.h  settings.cpp  settings.h  zemax_window_enumerator.cpp  zemax_window_enumerator.h
src/dde/: client.h  client_commands.cpp  client_connection.cpp  client_core.cpp  client_data.cpp  constants.h  dde_connection.h  dde_connection_manager.cpp  dde_connection_manager.h  dde_zemax_client.h  dde_zemax_client_core.cpp  dde_zemax_client_data.cpp  dde_zemax_const.h  dde_zemax_handler.cpp  dde_zemax_handler.h  dde_zemax_types.h  dde_zemax_utils.cpp  dde_zemax_utils.h  initial_data_load_service.cpp  initial_data_load_service.h  operation_monitor.cpp  operation_monitor.h  types.h  utils.cpp  utils.h
src/gui/: WindowManager.cpp  WindowManager.hpp  WindowRegistration.cpp  WindowRegistration.h  WindowRegistration.hpp  app_info_dialog.cpp  app_info_dialog.h  constants.h  container.cpp  content_router.cpp  content_router.h  dde_status_bar.cpp  dde_status_bar.h  debug_log_viewer.cpp  debug_log_viewer.h  dockable_windows_manager.cpp  dockable_windows_manager.h  forwards.h  graphics_backend.cpp  graphics_backend.h  gui.h  gui_container.cpp  gui_impl.h  gui_init.cpp  gui_manager.cpp  gui_render.cpp  gui_surface_analysis.cpp  gui_utils.cpp  imgui_utils.h  init.cpp  menu_bar_controller.cpp  menu_bar_controller.h  sag_analysis_controller.cpp  sag_analysis_controller.h  sag_analysis_service.cpp  sag_analysis_service.h  sag_map_analysis_service.cpp  sag_map_analysis_service.h  settings_manager.cpp  settings_manager.h  (+20 more)
src/gui/components/: content.cpp  dde_status.cpp  debug_log.cpp  gui_content.cpp  gui_content.h  gui_dde_status.cpp  gui_dde_status.h  gui_debug_log.cpp  gui_debug_log.h  gui_menu_bar.cpp  gui_menu_bar.h  gui_navbar.cpp  gui_navbar.h  gui_popups.cpp  gui_popups.h  gui_sidebar.cpp  gui_sidebar.h  navbar.cpp  popups.cpp  sidebar.cpp
src/gui/content_pages/: gui_page_local_surface_errors.cpp  gui_page_local_surface_errors.h  gui_page_optical_system_info.cpp  gui_page_optical_system_info.h  gui_page_surface_sag_analysis.cpp  gui_page_surface_sag_analysis.h  page_optical_system_info.cpp  page_surface_sag_analysis.cpp  page_surface_sag_analysis.h
src/gui/popups/: about_dialog.cpp  about_dialog.h  connect_dde.cpp  connect_dde.h  connection_lost_dialog.cpp  connection_lost_dialog.h  preferences_dialog.cpp  preferences_dialog.h  reset_confirm_dialog.cpp  reset_confirm_dialog.h  update_checker.cpp  update_checker.h
src/gui/windows/: dde_status.cpp  dde_status.h  dde_status_renderer.cpp  dde_status_renderer.h  debug_log.cpp  debug_log_viewer.cpp  debug_log_viewer.h  optical_system_info.cpp  surface_sag_analysis.cpp
src/gui/windows/popups/: about_dialog.cpp  about_dialog.h  update_checker.cpp  update_checker.h
src/gui/windows_dockable/: dde_status.cpp  dde_status.h  debug_log.cpp  debug_log.h  optical_system_info.cpp  surface_irregularity_map.cpp  surface_map_analysis.cpp  surface_profile_inspector.cpp  surface_sag_analysis.cpp
src/logger/: logger.cpp  logger.h
tests/: CMakeLists.txt  test_operation_monitor.cpp  test_settings.cpp
